src/styles/new.css
:root {
  --primary-bg-color: snow;
  --secondary-bg-color: teal;
  --primary-text-color: black;

  --secondary-text-color: snow;
  --ff-primary: "Roboto", sans-serif;
  --ff-accent: "Playfair Display", serif;
}
*,
*::before,
*::after {
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}
body,
h1,
h2,
h3,
p {
  padding: 0;
  /* margin: 0; */
}

body {
  font-family: var(--ff-primary);
  font-weight: 400;
  /* font-size: 1.3125rem; */
  /* line-height: 1.6; */
  margin: 0;
}
section {
  padding: 5rem 0;
}
.container--narrow {
  max-width: 34rem;
}
.container {
  margin: auto;
  width: min(90%, 70.5rem);
}

img {
  width: 100%;
  display: block;
}

#skillet {
}

h1,
h2,
h3 {
  font-family: var(--ff-accent);
  font-weight: 900;
  line-height: 1;
}

h2,
h3,
p {
  margin-bottom: 1em;
}

.bg-primary {
  color: var(--primary-text-color);
  background-color: var(--primary-bg-color);
}

.bg-dark {
  color: var(--primary-text-color);
  background-color: var(--secondary-bg-color);
}

.teal {
  color: teal;
}

.flex-container {
  display: flex;
}

.flex-gap {
  gap: 10vw;
}

@media only screen and (max-width: 40em) {
  .flex-container {
    flex-direction: column;
  }
}

.zoom {
  -webkit-transition: -webkit-transform 0.5s;
  -moz-transition: -moz-transform 0.5s;
  -ms-transition: -ms-transform 0.5s;
  -o-transition: -o-transform 0.5s;
  transition: transform 0.5s;
}
.zoom:hover {
  -webkit-transform: scale(1.05, 1.05);
  -moz-transform: scale(1.05, 1.05);
  -ms-transform: scale(1.05, 1.1);
  -o-transform: scale(1.05, 1.05);
  transform: scale(1.05, 1.05);
}

.box-shadow {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.p-break {
  display: none;
}
@media only screen and (max-width: 40em) {
  .p-break {
    display: inline;
  }
}

.skills-section > img {
  width: 150px;
  height: 150px;
  margin: auto;
}

.project-card,
.project-card-reverse {
  border: 1px var(--secondary-bg-color) solid;
  border-radius: 20px;
  /* max-width: 50vw; */
  height: 250px;
  display: flex;
  margin: 0 auto;
  overflow: hidden;
  margin-bottom: 30px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  -webkit-transition: -webkit-transform 0.5s;
  -moz-transition: -moz-transform 0.5s;
  -ms-transition: -ms-transform 0.5s;
  -o-transition: -o-transform 0.5s;
  transition: transform 0.5s;
}
.project-card:hover,
.project-card-reverse:hover {
  -webkit-transform: scale(1.05, 1.05);
  -moz-transform: scale(1.05, 1.05);
  -ms-transform: scale(1.05, 1.1);
  -o-transform: scale(1.05, 1.05);
  transform: scale(1.05, 1.05);
  opacity: 0.7;
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.project-card-reverse {
  flex-direction: row;
}

.card-left {
  flex: 1;
  overflow: hidden;
}
.card-right {
  flex: 1;
  text-align: center;
  background-color: #cccccc;
}
.card-right ul {
  margin-bottom: 2px;
}

.card-top {
  display: flex;
  flex-direction: column;
  /* height: 100%; */
  align-content: space-between;
}
.card-top > * {
  flex: 1;
  font-size: 1rem;
  margin-top: 0;
}
.card-top > p {
  font-size: 0.8rem;
}

.card-top > ul > li {
  padding: 5px;
  font-size: 1rem;
}

.project-image {
  height: 100%;
  width: 100%;
}

.tech-list {
  display: flex;
  /* grid-template-columns: repeat(3, 1fr); */
  list-style-type: none;
  margin: 0 auto;
  padding: 0;
}
.tech {
  border: 1px solid var(--primary-bg-color);
  margin: 5px;
  background-color: var(--secondary-bg-color);
}
.project-link-list {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  list-style-type: none;
  margin: 0 auto;
  padding: 0;
  font-weight: bold;
}
.project-link {
  background-color: var(--secondary-bg-color);
  color: var(--text-color);
  border: 1px var(--secondary-bg-color) solid;
  border-radius: 4px;
  text-decoration: none;
  margin: 5px;
  padding: 2px;

  cursor: pointer;
}

.project-link:hover {
  background-color: var(--primary-bg-color);
}

@media only screen and (max-width: 40em) {
  .card-top > p {
    flex: 1;
    font-size: 0.7rem;
    margin: 0;
  }
  .project-card,
  .project-card-reverse {
    height: 150px;
  }
  .card-left {
    display: none;
  }
  .card-top > ul > li {
    padding: 2px;
  }
  h3 {
    margin-bottom: 5px;
  }
}

input[type="email"],
input[type="name"],
select,
textarea {
  width: 100%; /* Full width */
  padding: 12px; /* Some padding */
  border: 1px solid var(--primary-text-color); /* Gray border */
  border-radius: 4px; /* Rounded borders */
  box-sizing: border-box; /* Make sure that padding and width stays in place */
  margin-top: 6px; /* Add a top margin */
  margin-bottom: 16px; /* Bottom margin */
  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
  font-family: "Times New Roman", Times, serif;
  font-size: 18px;
  color: var(--text-color);
}
/* input:focus {
  background-color: var(--secondary-bg-color);
} */

/* Style the submit button with a specific background color etc */
button[type="submit"] {
  background-color: var(--primary-bg-color);
  color: var(--secondary-bg-color);
  border: 1px var(--secondary-bg-color) solid;
  padding: 12px 20px;

  border-radius: 4px;
  cursor: pointer;
}

/* When moving the mouse over the submit button, add a darker green color */
button[type="submit"]:hover {
  background-color: var(--secondary-bg-color);
  color: var(--primary-bg-color);
}

/* Add a background color and some padding around the form */
.container-contact {
  border-radius: 5px;
  /* background-color: #f2f2f2; */

  max-width: 70vw;
  margin: 0 auto;
}
#contact-from > #submit {
}

#status {
  width: 90%;
  max-width: 500px;
  text-align: center;
  padding: 10px;
  margin: 0 auto;
  border-radius: 8px;
}

#status.success {
  background-color: #4caf50;
  animation: status 4s ease forwards;
}

#status.error {
  background-color: firebrick;
  color: white;
  animation: status 4s ease forwards;
}

@keyframes status {
  0% {
    opacity: 1;
    pointer-events: all;
  }
  90% {
    opacity: 1;
    pointer-events: all;
  }
  100% {
    opacity: 0;
    pointer-events: none;
  }
}
#contact {
  /* padding: 30px; */
}
header {
  background: var(--primary-bg-color);
  text-align: center;
  position: fixed;
  z-index: 999;
  width: 100%;
  /* margin-inline: 300px; */
}

/* changed this from the tutorial video to
   allow it to gain focus, making it tabbable */
.nav-toggle {
  position: absolute !important;
  top: -9999px !important;
  left: -9999px !important;
}

.nav-toggle:focus ~ .nav-toggle-label {
  outline: 3px solid rgba(lightblue, 0.75);
}

.nav-toggle-label {
  position: absolute;
  top: 0;
  left: 0;
  margin: 0em 1em;
  height: 100%;
  display: flex;
  align-items: center;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
  display: block;
  background: black;
  height: 2px;
  width: 2em;
  border-radius: 2px;
  position: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
  content: "";
  position: absolute;
}

.nav-toggle-label span::before {
  bottom: 7px;
}

.nav-toggle-label span::after {
  top: 7px;
}

nav {
  position: absolute;
  text-align: left;
  top: 100%;
  left: 0;
  background: white;
  width: 100%;
  transform: scale(1, 0);
  transform-origin: top;
  transition: transform 400ms ease-in-out;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

nav li {
  margin-bottom: 1em;
  margin-left: 1em;
}

nav a {
  /* color: white;/ */
  text-decoration: none;
  font-size: 1.2rem;
  text-transform: uppercase;
  opacity: 0;
  transition: opacity 150ms ease-in-out;
  color: var(--primary-text-color);
  cursor: pointer;
}

nav a:hover {
  color: var(--secondary-bg-color);
}
nav a:active {
  color: var(--secondary-bg-color);
}

.nav-toggle:checked ~ nav {
  transform: scale(1, 1);
}

.nav-toggle:checked ~ nav a {
  opacity: 1;
  transition: opacity 250ms ease-in-out 250ms;
}

@media screen and (min-width: 830px) {
  .nav-toggle-label {
    display: none;
  }

  header {
    display: grid;
    grid-template-columns: 1fr auto minmax(600px, 2fr) 1fr;
    /* margin: 0 5rem; */
  }

  .logo {
    grid-column: 2 / 3;
  }

  nav {
    position: relative;
    text-align: left;
    transition: none;
    transform: scale(1, 1);
    background: none;
    top: initial;
    left: initial;
    /* end Edge support stuff */

    grid-column: 3 / 4;
    display: flex;
    justify-content: flex-end;
    align-items: center;
  }

  nav ul {
    display: flex;
  }

  nav li {
    margin-left: 3em;
    margin-bottom: 0;
  }

  nav a {
    opacity: 1;
    position: relative;
  }

  nav a::before {
    content: "";
    display: block;
    height: 5px;
    background: var(--secondary-bg-color);
    position: absolute;
    top: -0.75em;
    left: 0;
    right: 0;
    transform: scale(0, 1);
    transition: transform ease-in-out 250ms;
  }

  nav a:hover::before {
    transform: scale(1, 1);
  }
}

#footer {
  padding: 15px;
}

#content {
  padding-top: 75px;
}

#home {
  display: flex;
  background-color: var(--primary-bg-color);
  /* margin-top: 85px; */
  /* height: 500px; */
  color: var(--text-color);
  padding-bottom: 20px;
  line-height: 1.6rem;
}

.personal {
  background-color: var(--primary-bg-color);
  flex: 1;
  height: 100%;
  margin-right: 5px;
}
.personal > h2,
.personal > h3,
.personal > div {
  margin-bottom: 0.5em;
}
.biography {
  background-color: var(--primary-bg-color);
  flex: 2;
  height: 100%;
}
#home h2 {
  margin: 10px 0px;
}
#home h3 {
  margin-top: 0;
}
#home p {
  font-size: 100%;
}
#bio > h2 {
  margin-top: 20px;
}

#bio > p:nth-child(3) {
  margin-bottom: 0;
}

#profile {
  height: 300px;
  width: 300px;
  border-radius: 50%;
  margin: auto;
  overflow: hidden;
}

#icons {
  display: flex;
  justify-content: center;
  gap: 10px;
  margin: 5px 90px 0px 90px;
}
.icons-icon {
  width: 30px;
  height: 30px;

  -webkit-transition: -webkit-transform 0.7s;
  -moz-transition: -moz-transform 0.7s;
  -ms-transition: -ms-transform 0.7s;
  -o-transition: -o-transform 0.7s;
  transition: transform 0.7s;
}
.icons-icon:hover {
  -webkit-transform: scale(1.3, 1.3);
  -moz-transform: scale(1.3, 1.3);
  -ms-transform: scale(1.3, 1.3);
  -o-transform: scale(1.3, 1.3);
  transform: scale(1.3, 1.3);
}

#bio {
  display: block;
  text-align: start;
}
#education {
  display: flex;
  text-align: start;
}

#education > div {
  flex: 1;
}

#current-learn {
  margin-top: 0;
}
#current-learn > li {
  margin-bottom: 7px;
  font-weight: bold;
}

#love {
  color: var(--secondary-bg-color);
  font-weight: bolder;
}
.school > .info > p {
  margin: 0;
}
.school > .icon {
  float: left;
  margin: 0px 25px;
}

.school > .vcu-icon {
  float: left;
  margin: 0px 5px;
}
.school > .icon > #uor {
  height: 30px;
  width: 30px;
  margin: 6px 0px;
}
.school > .icon-ex {
  float: left;
  margin: 0px 30px;
}
.school > .icon-ex > .arrow {
  height: 20px;
  width: 20px;
  margin: 15px 0px;
  cursor: pointer;
}
/* .school > .icon-ex > .arrow:hover {
  -webkit-transform: scale(1.3, 1.3);
  -moz-transform: scale(1.3, 1.3);
  -ms-transform: scale(1.3, 1.3);
  -o-transform: scale(1.3, 1.3);
  transform: scale(1.3, 1.3);
} */
.school > .icon-ex > .lower {
  height: 20px;
  width: 20px;
  margin: 20px 0px 10px 0px;
}
.school > .vcu-icon > #vcu {
  height: 30px;
  width: 69px;
  margin: 6px 0px;
}

.job-list {
  margin-top: 0;
  padding-left: 100px;
}

#home-top {
  padding-top: 0px;
}

@media screen and (max-width: 1145px) and (min-width: 800px) {
  #home {
    flex-direction: column;
  }
  /* #icons {
    display: flex;
    justify-content: center;
    gap: 10px;
    margin: 5px 30vw 0px 30vw;
  } */
  .personal {
    margin: 0;
  }
}
@media only screen and (max-width: 800px) {
  #home,
  #education {
    display: block;
  }
  #home h2 {
    text-align: center;
    margin-top: 2rem;
    /* text-decoration: underline; */
  }
  /* #icons {
    display: flex;
    justify-content: center;
    gap: 10px;
    width: 100%;
    padding: 0 20vw;
    margin: 0 auto;
  } */
  .personal {
    margin: 0;
  }
}

